[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caravan-layout-optimizer"
version = "1.0.0"
description = "OpenEnv Caravan Layout Optimization Environment"
authors = [{ name = "Jayesh Jangid" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "requests",
    "openai",
    "httpx",
    "pyyaml",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "server"]
